--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,6 @@ repositories {
 
 dependencies {
     compile "org.deeplearning4j:deeplearning4j-core:0.6.0"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'junit', name: 'junit', version: '4.12'
+    compile 'org.nd4j:nd4j-native-platform:0.9.1'
 }
