--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,22 @@
 group 'DeepLearning'
 version '1.0-SNAPSHOT'
 
+buildscript {
+    repositories {
+        maven {
+            url "http://maven.aliyun.com/nexus/content/groups/public/"
+        }
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.9.RELEASE")
+    }
+}
+apply plugin: 'org.springframework.boot'
 apply plugin: 'java'
 apply plugin: 'idea'
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     maven {
@@ -15,6 +27,12 @@ repositories {
 
 dependencies {
     compile "org.deeplearning4j:deeplearning4j-core:0.6.0"
-    compile group: 'junit', name: 'junit', version: '4.12'
+    compile "junit:junit:4.12"
     compile 'org.nd4j:nd4j-native-platform:0.9.1'
+    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.boot:spring-boot-starter-tomcat'
+    compile 'org.apache.tomcat.embed:tomcat-embed-jasper'
+    compile 'javax.servlet:jstl'
+    compile 'org.springframework.boot:spring-boot-devtools'
 }
+
